samples/_failures_safe/1761798970_44662e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fd7aec8.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_3fd7aec8.c:188:20: error: expected ‘;’ at end of input
  188 |     start->distance
      |                    ^
      |                    ;
./samples/SAFE/__tmp_3fd7aec8.c:188:5: error: expected declaration or statement at end of input
  188 |     start->distance
      |     ^~~~~
